Revision history for Attribute-Predicate

{{$NEXT}}

0.0.5  2024-06-24T20:10:17+02:00
    - Modernize test file extension
    - Add sponsor link and button
    - Update copyright year

0.0.4  2021-11-07T12:42:14+01:00
    - Remove module statement, it is not necessary anymore

0.0.3  2021-09-10T10:42:01+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Update copyright year

0.0.2  2019-11-10T21:00:09+01:00
    - Changed Perl 5 to Perl

0.0.1  2018-08-08T18:03:09+02:00
    - Initial version