@@ -1,4 +1,4 @@
-name: test
+name: Windows
 
 on:
   push:
@@ -13,16 +13,14 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macOS-latest
           - windows-latest
         raku-version:
           - 'latest'
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - name: Run Tests
-        run: raku run-tests
+      - name: Run Special Tests
+        run: raku run-tests -i
