@@ -18,6 +18,7 @@
   ],
   "source-url": "https://github.com/lizmat/Attribute-Predicate.git",
   "tags": [
+    "ATTRIBUTE",
     "UTILS"
   ],
   "test-depends": [
