@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/Attribute-Predicate/workflows/test/badge.svg)](https://github.com/lizmat/Attribute-Predicate/actions)
+[![Actions Status](https://github.com/lizmat/Attribute-Predicate/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/Attribute-Predicate/actions) [![Actions Status](https://github.com/lizmat/Attribute-Predicate/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/Attribute-Predicate/actions) [![Actions Status](https://github.com/lizmat/Attribute-Predicate/actions/workflows/windows.yml/badge.svg)](https://github.com/lizmat/Attribute-Predicate/actions)
 
 NAME
 ====
@@ -41,7 +41,7 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2018, 2019, 2021, 2024 Elizabeth Mattijsen
+Copyright 2018, 2019, 2021, 2024, 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
