@@ -2,12 +2,14 @@ name = Attribute-Predicate
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Attribute/Predicate.rakumod
+filename = doc/Attribute-Predicate.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
